--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yiisoft/yii2-gii",
+    "name": "kv4nt/yii2-gii",
     "description": "The Gii extension for the Yii framework",
     "keywords": [
         "yii2",
